shared schemas
